--- a/task-1-3/css/style.css
+++ b/task-1-3/css/style.css
@@ -296,11 +296,11 @@ option {
 }
 
 .button, .field__file::-webkit-file-upload-button {
+  border: 2px solid #42a779;
+  border-radius: 4px;
   padding: 0.5em 1em;
   color: #fff;
   background-color: #42a779;
-  border: 2px solid #42a779;
-  border-radius: 4px;
   transition: background-color 0.25s, border-color 0.25s;
 }
 .button:hover, .field__file:hover::-webkit-file-upload-button {
@@ -315,14 +315,14 @@ option {
   cursor: pointer;
 }
 .checkbox__caption::before {
+  border: 2px solid #dbdbdb;
+  border-radius: 4px;
   content: "";
   display: inline-block;
   width: 1em;
   height: 1em;
   padding: 2px;
   background-clip: content-box;
-  border: 2px solid #dbdbdb;
-  border-radius: 4px;
   transition: background-color 0.25s, border-color 0.25s;
 }
 .checkbox--circle .checkbox__caption::before {
@@ -338,7 +338,7 @@ option {
   width: 1px;
   height: 1px;
   margin: -1px;
-  border: 0;
+  border: none;
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
@@ -373,14 +373,14 @@ option {
 }
 
 .range__value {
+  border: 2px solid #42a779;
+  border-radius: 4px;
   min-width: 3.5em;
   padding: 0.5em;
   font-weight: 700;
   text-align: center;
   color: #fff;
   background-color: #42a779;
-  border: 2px solid #42a779;
-  border-radius: 4px;
 }
 
 .field__title {
@@ -394,10 +394,10 @@ option {
 }
 
 .field__text {
-  width: 100%;
-  padding: 0.5em;
   border: 2px solid #dbdbdb;
   border-radius: 4px;
+  width: 100%;
+  padding: 0.5em;
 }
 .field__text::-webkit-outer-spin-button, .field__text::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -420,10 +420,10 @@ option {
 }
 
 .field__select {
-  width: 100%;
-  padding: 0.5em;
   border: 2px solid #dbdbdb;
   border-radius: 4px;
+  width: 100%;
+  padding: 0.5em;
 }
 
 .field__file::-webkit-file-upload-button {
@@ -458,23 +458,19 @@ option {
 
 .form__fields {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 1em 2em;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
-@media screen and (max-width: 719px) {
+@media screen and (min-width: 720px) {
   .form__fields {
-    grid-template-columns: unset;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
-.form__field--wide {
-  grid-column: 1/3;
-}
-@media screen and (max-width: 719px) {
+@media screen and (min-width: 720px) {
   .form__field--wide {
-    grid-column: unset;
+    grid-column: 1/3;
   }
 }
 
