--- a/task-1-3/sass/_form.scss
+++ b/task-1-3/sass/_form.scss
@@ -18,7 +18,7 @@
   font-family: $headerFont;
   text-align: center;
   background-color: $secondaryBgColor;
-  border-bottom: $borderDefault;
+  border-bottom: $borderWidth solid $borderColor;
 }
 
 .form__title {
@@ -27,22 +27,19 @@
 
 .form__fields {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 1em 2em;
 
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 
-  @media screen and (max-width: 719px) {
-    grid-template-columns: unset;
+  @include media-desktop {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 .form__field--wide {
-  grid-column: 1 / 3;
-
-  @media screen and (max-width: 719px) {
-    grid-column: unset;
+  @include media-desktop {
+    grid-column: 1 / 3;
   }
 }
 
@@ -51,5 +48,5 @@
   padding-bottom: 1em;
   text-align: right;
   background-color: $secondaryBgColor;
-  border-top: $borderDefault;
+  border-top: $borderWidth solid $borderColor;
 }
