add h1 and h2 headers to fix validation errors

--- a/task-1-5/css/style.css
+++ b/task-1-5/css/style.css
@@ -6,20 +6,32 @@
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 4rem;
-  font-weight: 700;
-  color: #fff;
 }
 
 img {
   object-fit: cover;
 }
 
-p {
+h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 4rem;
+  color: #fff;
+}
+
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .parallax {
