--- a/task-1-5/sass/_base.scss
+++ b/task-1-5/sass/_base.scss
@@ -6,18 +6,18 @@
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 4rem;
-  font-weight: 700;
-  color: #fff;
 }
 
 img {
   object-fit: cover;
 }
 
-p {
+h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 4rem;
+  color: #fff;
 }
