--- a/task-1-7/sass/_carousel.scss
+++ b/task-1-7/sass/_carousel.scss
@@ -9,11 +9,7 @@
 }
 
 .carousel__slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  @include absoluteAllSpace;
 
   opacity: 0;
   transition: opacity $animationSlide;
