--- a/task-1-7/sass/_vars.scss
+++ b/task-1-7/sass/_vars.scss
@@ -12,18 +12,15 @@ $animationSlide: 0.75s;
 $animationTitle: 0.5s 0.5s;
 $animationText: 0.5s 0.75s;
 
-@mixin materialTheme {
-  font-family: "Roboto", sans-serif;
-  color: #1f1f1f;
-  background-image: url("../assets/material.jpg");
-}
-@mixin carbonTheme {
-  font-family: "IBM Plex Sans", sans-serif;
-  color: #161616;
-  background-image: url("../assets/carbon.jpg");
-}
-@mixin lightningTheme {
-  font-family: "Abel", sans-serif;
-  color: #fff;
-  background-image: url("../assets/lightning.webp");
-}
+// Slide themes styles
+$materialFont: "Roboto", sans-serif;
+$materialColor: #1f1f1f;
+$materialImage: url("../assets/material.jpg");
+
+$carbonFont: "IBM Plex Sans", sans-serif;
+$carbonColor: #161616;
+$carbonImage: url("../assets/carbon.jpg");
+
+$lightningFont: "Abel", sans-serif;
+$lightningColor: #fff;
+$lightningImage: url("../assets/lightning.webp");
