--- a/task-1-8/sass/main.scss
+++ b/task-1-8/sass/main.scss
@@ -1,1 +1,7 @@
+@import "abstracts/vars";
+@import "abstracts/mixins";
+
 @import "base/modern-normalize";
+@import "base/fonts";
+@import "base/reset";
+@import "base/basic";
