--- a/task-1-8/sass/main.scss
+++ b/task-1-8/sass/main.scss
@@ -5,3 +5,9 @@
 @import "base/fonts";
 @import "base/reset";
 @import "base/basic";
+
+@import "components/logo";
+@import "components/nav";
+
+@import "layout/container";
+@import "layout/header";
