--- a/task-1-8/sass/main.scss
+++ b/task-1-8/sass/main.scss
@@ -8,6 +8,8 @@
 
 @import "components/logo";
 @import "components/nav";
+@import "components/button";
 
 @import "layout/container";
 @import "layout/header";
+@import "layout/hero";
