--- a/task-1-8/sass/layout/_container.scss
+++ b/task-1-8/sass/layout/_container.scss
@@ -1,5 +1,9 @@
 .container {
   max-width: 1300px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 15px;
+
+  &--narrow {
+    padding: 0 175px;
+  }
 }
