--- a/task-1-8/sass/abstracts/_vars.scss
+++ b/task-1-8/sass/abstracts/_vars.scss
@@ -14,6 +14,9 @@ $primBgColor: $whiteColor;
 $secBgColor: rgba(74, 153, 211, 0.1);
 $heroBg: linear-gradient(to bottom, $primAccentColor -300%, $primBgColor 75%);
 
+$dotsImg: "../assets/images/dots.svg";
+$squaresImg: "../assets/images/squares";
+
 $heroShadow: 0px 4px 16px rgba(75, 0, 129, 0.1);
 $cardShadow: 5px 20px 50px rgba(74, 153, 211, 0.2);
 $btnShadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
