--- a/task-1-8/sass/main.scss
+++ b/task-1-8/sass/main.scss
@@ -9,7 +9,9 @@
 @import "components/logo";
 @import "components/nav";
 @import "components/button";
+@import "components/card";
 
 @import "layout/container";
 @import "layout/header";
 @import "layout/hero";
+@import "layout/mission";
