--- a/task-1-8/sass/abstracts/_vars.scss
+++ b/task-1-8/sass/abstracts/_vars.scss
@@ -16,6 +16,8 @@ $heroBg: linear-gradient(to bottom, $primAccentColor -300%, $primBgColor 75%);
 
 $dotsImg: "../assets/images/dots.svg";
 $squaresImg: "../assets/images/squares";
+$quotesImg: "../assets/images/quotes.svg";
+$userImg: "../assets/images/user.png";
 
 $heroShadow: 0px 4px 16px rgba(75, 0, 129, 0.1);
 $cardShadow: 5px 20px 50px rgba(74, 153, 211, 0.2);
