--- a/task-1-8/sass/main.scss
+++ b/task-1-8/sass/main.scss
@@ -10,9 +10,11 @@
 @import "components/nav";
 @import "components/button";
 @import "components/card";
+@import "components/slider";
 
 @import "layout/container";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/mission";
 @import "layout/about";
+@import "layout/testimonials";
