--- a/task-1-8/sass/main.scss
+++ b/task-1-8/sass/main.scss
@@ -11,6 +11,9 @@
 @import "components/button";
 @import "components/card";
 @import "components/slider";
+@import "components/quick-links";
+@import "components/subscribe";
+@import "components/social";
 
 @import "layout/container";
 @import "layout/header";
@@ -19,3 +22,4 @@
 @import "layout/about";
 @import "layout/testimonials";
 @import "layout/download";
+@import "layout/footer";
