--- a/task-1-8/sass/components/_logo.scss
+++ b/task-1-8/sass/components/_logo.scss
@@ -1,4 +1,8 @@
 .logo {
   @include font($weight: 700, $size: 34px, $height: 1);
   color: $primAccentColor;
+
+  &--white {
+    color: $whiteColor;
+  }
 }
